# ai_ppt

./: .env.example  .gitignore  BitNet_README.md  CMakeLists.txt  README.md  benchmark_bitnet_server.py  bitnet.md  bitnet_server.cpp  bitnet_server_README.md  build_bitnet_server.bat  build_bitnet_server.sh  download_model.bat  download_model.sh  pyproject.toml  requirements.txt  requirements_bitnet.txt  run_bitnet_example.py  setup_bitnet.bat  setup_bitnet.sh  setup_ide.bat  setup_ide.sh  setup_uv.bat  setup_uv.sh  uv.toml
ai_ppt_generator/: __init__.py  cli.py  generator.py
